feat: cmsConnection added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gatsbystorefront/gatsby-source-shopify",
-  "version": "3.6.0",
+  "version": "3.6.0-1",
   "description": "Gatsby source plugin for building websites using Gatsby Storefront API for Shopify as a data source.",
   "scripts": {
     "build": "babel src --out-dir . --ignore \"**/__tests__\"",
