--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gatsbystorefront/gatsby-source-shopify",
-  "version": "3.6.0-2",
+  "version": "4.4.0",
   "description": "Gatsby source plugin for building websites using Gatsby Storefront API for Shopify as a data source.",
   "scripts": {
     "build": "babel src --out-dir . --ignore \"**/__tests__\"",
@@ -29,25 +29,25 @@
   },
   "license": "MPL-2.0",
   "peerDependencies": {
-    "gatsby": "^2.0.0"
+    "gatsby": "^3.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
-    "cross-env": "^7.0.2"
+    "cross-env": "^7.0.3"
   },
   "dependencies": {
-    "babel-preset-gatsby-package": "^0.8.0-next.0",
+    "babel-preset-gatsby-package": "^1.4.0-next.0",
     "chalk": "^4.1.0",
     "gatsby-node-helpers": "^0.3.0",
-    "gatsby-source-filesystem": "^2.7.0-next.1",
-    "graphql-request": "^3.3.0",
-    "lodash": "^4.17.20",
+    "gatsby-source-filesystem": "^3.4.0-next.0",
+    "graphql-request": "^1.8.2",
+    "lodash": "^4.17.21",
     "p-iteration": "^1.1.8",
     "prettyjson": "^1.2.1"
   },
   "engines": {
-    "node": ">=10.13.0"
+    "node": ">=12.13.0"
   },
   "main": "index.js"
 }
